# toys

./: README.md
crap-cipher-practice/: Cargo.toml
crap-cipher-practice/src/: column.rs  des.rs  main.rs  vigenere.rs
crypto-toolkit/: .gitattributes  README.md  classic.py  main.py
datastructure-cpp/: .gitattributes  CMakeLists.txt  README.md
datastructure-cpp/include/: linked_list.h
datastructure-cpp/include/lab1/: joseph_ring.h
datastructure-cpp/include/lab2/: brackets_match.h  maze.h  parking_lot.h
datastructure-cpp/include/lab3/: median.h
datastructure-cpp/include/lab4/: change.h
datastructure-cpp/src/: main.cpp
datastructure-cpp/src/lab1/: joseph_ring.cpp
datastructure-cpp/src/lab2/: brackets_match.cpp  maze.cpp  parking_lot.cpp
datastructure-cpp/src/lab3/: median.cpp
datastructure-cpp/src/lab4/: change.cpp
datastructure-rust/: Cargo.toml
datastructure-rust/src/: main.rs
datastructure-rust/src/exp1/: joseph_ring.rs  mod.rs
datastructure-rust/src/exp2/: brackets_match.rs  maze.rs  mod.rs  parking_lot.rs
os-experiment/: .gitignore  Cargo.toml  README.md
os-experiment/src/: main.rs  myallocator.rs  myprocess.rs  scheduler.rs
os-python/: .gitignore  README.md  banker_allocator.py  ordered_allocator.py  scheduler.py
pe_entropy/: .gitignore  Cargo.toml
pe_entropy/src/: main.rs  pe.rs  util.rs
rcaptor/: Cargo.toml
rcaptor/src/: main.rs
someweb/: README.md  package.json
someweb/graph/: graph1_node.txt  graph2_nodes.txt  graph3_nodes.txt  graph_edges.txt  graph_nodes.txt  tojson.py
someweb/public/: APT_Vector.json  aptcount.json  graph1.json  graph3_nodes.json  result.json  scals.json  scals.txt  train.json
someweb/src/: App.tsx  index.tsx  override.css
someweb/src/components/: AptFamilySection.tsx  Card.tsx  FileInfoTable.tsx  Footer.tsx  GraphContainer.tsx  ImplementationSection.tsx  IntroductionSection.tsx  Navbar.tsx  UploadButton.tsx  UploadSection.tsx  Vr.tsx
someweb/src/context/: FileUploadContext.tsx
someweb/src/lib/: api.ts  drawGraph.js
sucket/: CMakeLists.txt  README.md
sucket/include/: fileserver.h  netutil.h  timeserver.h
sucket/src/: main.c  netutil.c
sucket/src/fileserver/: client.c  server.c  util.c
sucket/src/timeserver/: client.c  server.c
toy-arpripper/: Cargo.toml  README.md
toy-arpripper/src/: main.rs
toy_json_parser/: Cargo.toml
toy_json_parser/src/: json.rs  main.rs
toyhttp/: CMakeLists.txt  README.md
toyhttp/html/: hellopy.cgi  index.html
toyhttp/html/dir/: shell.cgi
toyhttp/include/: debug.h  simplehttp.h  tool.h
toyhttp/src/: simplehttp.c  test.c  tool.c
(+6 files in other folders)
