[package]
name = "rcaptor"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
pnet = "0.28.0"
structopt = "0.3"
pretty-hex = "0.2"
chrono = "0.4"
ctrlc = { version = "3.2", features = ["termination"] }
