[package]
name = "toy-arpripper"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
structopt = "0.3"
log = "0.4"
env_logger = "0.9"
lazy_static = "1.4.0"

[dependencies.pnet]
version = "0.29"

[profile.release]
strip = "symbols"